--- a/acceptedpapers.html
+++ b/acceptedpapers.html
@@ -96,16 +96,32 @@
   overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
   font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-eqnd{background-color:#cbcefb;border-color:#cbcefb;text-align:left;vertical-align:top}
+.tg .tg-21jz{background-color:#cbcefb;border-color:#c0c0c0;text-align:left;vertical-align:top}
 .tg .tg-wo29{border-color:#c0c0c0;text-align:left;vertical-align:top}
 </style>
 <table class="tg">
 <thead>
   <tr>
-    <th class="tg-wo29">Paul Kobialka, Silvia Lizeth Tapia Tarifa, Gunnar Rye Bergersen and Einar Broch Johnsen</th>
-    <th class="tg-wo29">Weighted Games for User Journeys</th>
+    <th class="tg-21jz" colspan="2"><span style="font-weight:bold">Verification and Testing 1</span></th>
   </tr>
 </thead>
 <tbody>
+  <tr>
+    <td class="tg-wo29">Dirk Beyer, Marian Lingsch and Martin Spiessl</td>
+    <td class="tg-wo29">A Unifying Approach for Control-Flow-Based Loop Approximation</td>
+  </tr>
+  <tr>
+    <td class="tg-wo29">Junaid Rasheed and Michal Konečný</td>
+    <td class="tg-wo29">Auto-active Verification of Floating-point Programs via Nonlinear Real Provers</td>
+  </tr>
+  <tr>
+    <td class="tg-wo29">Jan Haltermann and Heike Wehrheim</td>
+    <td class="tg-wo29">Information Exchange between Over- and Underapproximating Software Analyses</td>
+  </tr>
+  <tr>
+    <td class="tg-eqnd" colspan="2"><span style="font-weight:bold">Program Analysis</span></td>
+  </tr>
   <tr>
     <td class="tg-wo29">Matteo Cimini</td>
     <td class="tg-wo29">A Query Language for Language Analysis</td>
@@ -115,32 +131,60 @@
     <td class="tg-wo29">Field-Sensitive Program Slicing</td>
   </tr>
   <tr>
-    <td class="tg-wo29">Pedro Antonino, Juliandson Ferreira, Augusto Sampaio and Bill Roscoe</td>
-    <td class="tg-wo29">Specification is Law: Safe Deployment of Ethereum Smart Contracts</td>
-  </tr>
-  <tr>
-    <td class="tg-wo29">Bernhard K. Aichernig, Sandra König, Cristinel Mateis, Andrea Pferscher, Dominik Schmidt and Martin Tappler</td>
-    <td class="tg-wo29">Constrained Training of Recurrent Neural Networks for Automata Learning</td>
-  </tr>
-  <tr>
     <td class="tg-wo29">Malte Mues, Falk Howar and Simon Dierl</td>
     <td class="tg-wo29">SPouT: Symbolic Path Recording during Testing - a Concolic Executor for the JVM</td>
+  </tr>
+  <tr>
+    <td class="tg-21jz" colspan="2"><span style="font-weight:bold">Verification and Testing 2</span></td>
+  </tr>
+  <tr>
+    <td class="tg-wo29">Dirk Beyer, Martin Spiessl and Sven Umbricht</td>
+    <td class="tg-wo29">Cooperation between Automatic and Interactive Software Verifiers</td>
+  </tr>
+  <tr>
+    <td class="tg-wo29">Lukas Miedema and Clemens Grelck</td>
+    <td class="tg-wo29">Strategy Switching: Smart Fault-tolerance for Weakly-hard Resource-constraint Real-time Applications</td>
   </tr>
   <tr>
     <td class="tg-wo29">Carlos Galindo, Sergio Perez Rubio and Josep Silva</td>
     <td class="tg-wo29">A Java Program Slicer (System demo - Tool paper)</td>
   </tr>
   <tr>
+    <td class="tg-21jz" colspan="2"><span style="font-weight:bold">Formal Methods for Intelligent and Learning Systems</span></td>
+  </tr>
+  <tr>
+    <td class="tg-wo29">Bernhard K. Aichernig, Sandra König, Cristinel Mateis, Andrea Pferscher, Dominik Schmidt and Martin Tappler</td>
+    <td class="tg-wo29">Constrained Training of Recurrent Neural Networks for Automata Learning</td>
+  </tr>
+  <tr>
+    <td class="tg-wo29">Yizhak Elboher, Elazar Cohen and Guy Katz</td>
+    <td class="tg-wo29">Neural Network Verification using Residual Reasoning</td>
+  </tr>
+  <tr>
+    <td class="tg-wo29">Nathaniel Hamilton, Preston K Robinette and Taylor T Johnson</td>
+    <td class="tg-wo29">Training Agents to Satisfy Timed and Untimed Signal Temporal Logic Specifications with Reinforcement Learning</td>
+  </tr>
+  <tr>
+    <td class="tg-21jz" colspan="2"><span style="font-weight:bold">Specification and Contracts</span></td>
+  </tr>
+  <tr>
     <td class="tg-wo29">Tobias Runge, Alexander Kittelmann, Marco Servetto, Alex Potanin and Ina Schaefer</td>
     <td class="tg-wo29">Information Flow Control-by-Construction for an Object-Oriented Language</td>
   </tr>
   <tr>
-    <td class="tg-wo29">Jan Haltermann and Heike Wehrheim</td>
-    <td class="tg-wo29">Information Exchange between Over- and Underapproximating Software Analyses</td>
+    <td class="tg-wo29">Pedro Antonino, Juliandson Ferreira, Augusto Sampaio and Bill Roscoe</td>
+    <td class="tg-wo29">Specification is Law: Safe Deployment of Ethereum Smart Contracts</td>
   </tr>
   <tr>
-    <td class="tg-wo29">Irman Faqrizal, Gwen Salaün and Yliès Falcone</td>
-    <td class="tg-wo29">Runtime Enforcement of IEC 61499 Applications</td>
+    <td class="tg-wo29">Namrata Jain, Kosuke Kaneko and Subodh Sharma</td>
+    <td class="tg-wo29">SKLEE: A Dynamic Symbolic Analysis Tool for Ethereum Smart Contracts</td>
+  </tr>
+  <tr>
+    <td class="tg-21jz" colspan="2"><span style="font-weight:bold">Program Synthesis</span></td>
+  </tr>
+  <tr>
+    <td class="tg-wo29">Paul Kobialka, Silvia Lizeth Tapia Tarifa, Gunnar Rye Bergersen and Einar Broch Johnsen</td>
+    <td class="tg-wo29">Weighted Games for User Journeys</td>
   </tr>
   <tr>
     <td class="tg-wo29">Ioannis Stefanakos, Radu Calinescu, James Douthwaite, Jonathan Aitken and James Law</td>
@@ -151,44 +195,26 @@
     <td class="tg-wo29">Timely specification repair for Alloy 6</td>
   </tr>
   <tr>
-    <td class="tg-wo29">Dirk Beyer, Marian Lingsch and Martin Spiessl</td>
-    <td class="tg-wo29">A Unifying Approach for Control-Flow-Based Loop Approximation</td>
-  </tr>
-  <tr>
-    <td class="tg-wo29">Junaid Rasheed and Michal Konečný</td>
-    <td class="tg-wo29">Auto-active Verification of Floating-point Programs via Nonlinear Real Provers</td>
-  </tr>
-  <tr>
-    <td class="tg-wo29">Namrata Jain, Kosuke Kaneko and Subodh Sharma</td>
-    <td class="tg-wo29">SKLEE: A Dynamic Symbolic Analysis Tool for Ethereum Smart Contracts</td>
-  </tr>
-  <tr>
-    <td class="tg-wo29">Lukas Miedema and Clemens Grelck</td>
-    <td class="tg-wo29">Strategy Switching: Smart Fault-tolerance for Weakly-hard Resource-constraint Real-time Applications</td>
-  </tr>
-  <tr>
-    <td class="tg-wo29">Nathaniel Hamilton, Preston K Robinette and Taylor T Johnson</td>
-    <td class="tg-wo29">Training Agents to Satisfy Timed and Untimed Signal Temporal Logic Specifications with Reinforcement Learning</td>
-  </tr>
-  <tr>
-    <td class="tg-wo29">Yizhak Elboher, Elazar Cohen and Guy Katz</td>
-    <td class="tg-wo29">Neural Network Verification using Residual Reasoning</td>
+    <td class="tg-21jz" colspan="2"><span style="font-weight:bold">Temporal Logic</span></td>
   </tr>
   <tr>
     <td class="tg-wo29">Bernard Serbinowski and Taylor T Johnson</td>
-    <td class="tg-wo29">BehaVerify: Verifying Temporal Logic Specifications for Behavior</td>
-  </tr>
-  <tr>
-    <td class="tg-wo29">Angelo Ferrando and Vadim Malvone</td>
-    <td class="tg-wo29">Runtime Verification of Autonomous Systems with Imperfect Information</td>
+    <td class="tg-wo29">BehaVerify: Verifying Temporal Logic Specifications for Behavior Trees</td>
   </tr>
   <tr>
     <td class="tg-wo29">Shizhen Yu, Yifan Dong, Jiuyang Liu, Yong Li, Zhilin Wu, David N. Jansen and Lijun Zhang</td>
     <td class="tg-wo29">CHA: Supporting SVA-like Assertions in Formal Verification of Chisel Programs</td>
   </tr>
   <tr>
-    <td class="tg-wo29">Dirk Beyer, Martin Spiessl and Sven Umbricht</td>
-    <td class="tg-wo29">Cooperation between Automatic and Interactive Software Verifiers</td>
+    <td class="tg-21jz" colspan="2"><span style="font-weight:bold">Runtime Methods</span></td>
+  </tr>
+  <tr>
+    <td class="tg-wo29">Angelo Ferrando and Vadim Malvone</td>
+    <td class="tg-wo29">Runtime Verification of Autonomous Systems with Imperfect Information</td>
+  </tr>
+  <tr>
+    <td class="tg-wo29">Irman Faqrizal, Gwen Salaün and Yliès Falcone</td>
+    <td class="tg-wo29">Runtime Enforcement of IEC 61499 Applications</td>
   </tr>
 </tbody>
 </table>
