--- a/committees.html
+++ b/committees.html
@@ -91,7 +91,7 @@
         <div id="secondary" class="widget-area sidey" role="complementary">
    </div>
 <h2>Programme Committee Chairs</h2>
-   <p><a href="https://www.fokus.fraunhofer.de/usr/de_schlingloff">Holger Schlingloff</a>, Fraunhofer FOKUS and Humboldt University of Berlin, Germany<br>
+   <p><a href="https://www.fokus.fraunhofer.de/usr/de_schlingloff">Bernd-Holger Schlingloff</a>, Fraunhofer FOKUS and Humboldt University of Berlin, Germany<br>
    <a href="https://faculty.bjtu.edu.cn/trans/8937.html">Ming Chai</a>, Beijing Jiaotong University, China<br></p>
 		  
 <h2>Programme Committee</h2>
@@ -131,7 +131,7 @@
     <a href=" https://www.unibo.it/sitoweb/gianluigi.zavattaro/en ">Gianluigi Zavattaro</a>, University of Bologna, Italy<br></p>
    
   <h2>Organising Committee</h2>
-   <p><a href="https://www.fokus.fraunhofer.de/usr/de_schlingloff">Holger Schlingloff</a>, Fraunhofer FOKUS and Humboldt University of Berlin, Germany<br>
+   <p><a href="https://www.fokus.fraunhofer.de/usr/de_schlingloff">Bernd-Holger Schlingloff</a>, Fraunhofer FOKUS and Humboldt University of Berlin, Germany<br>
    <a href="https://faculty.bjtu.edu.cn/trans/8937.html">Ming Chai</a>, Beijing Jiaotong University, China<br></p>
 	      
 <h2>Steering Committee</h2>
@@ -140,7 +140,7 @@
    <a href="https://www.imtlucca.it/it/rocco.denicola">Rocco De Nicola</a>, IMT - School for Advanced Studies Lucca, Italy<br />
    <a href="http://convecs.inria.fr/people/Gwen.Salaun/">Gwen Salaün</a>, University of Grenoble Alpes, France<br />
    <a href="http://www.ru.is/faculty/marjan/">Marjan Sirjani</a>, Malardalen University, Sweden<br />
-   <a href="https://www.fokus.fraunhofer.de/usr/de_schlingloff">Holger Schlingloff</a>, Fraunhofer FOKUS and Humboldt University of Berlin, Germany<br />
+   <a href="https://www.fokus.fraunhofer.de/usr/de_schlingloff">Bernd-Holger Schlingloff</a>, Fraunhofer FOKUS and Humboldt University of Berlin, Germany<br />
    <a href="https://faculty.bjtu.edu.cn/trans/8937.html">Ming Chai</a>, Beijing Jiaotong University, China<br></p>
 	
 	
