--- a/program.html
+++ b/program.html
@@ -90,7 +90,7 @@
       <div class="page-content">
         <div id="secondary" class="widget-area sidey" role="complementary">
    </div>
-The conference will take place in-person-only at Humboldt-University in Berlin-Adlershof.
+<p>The conference will take place in-person-only at Humboldt-University in Berlin-Adlershof.</p>
 	      
 	      <h2> 
       <b> DAY 1 Wednesday 28 September 2022</b>
