--- a/program.html
+++ b/program.html
@@ -96,9 +96,11 @@
       <b> DAY 1 Wednesday 28 September 2022</b>
     </h2>
     <h3 class="prog">
-      <b>09:00-09:45 Invited Talk</b>
+      <b>09:00-09:45 Invited Talk: Distributed Process Calculi with Local States</b>
+       <br>
+      &emsp;&emsp;&emsp;&emsp;&emsp; Uwe Nestmann
       <br>
-      <b>10:00-12:00 Session 1: Verification and Testing 1</b>
+      <b>10:00-12:00 Session 1: Software Verification</b>
     </h3>
     <p>
       10:00-10:40
@@ -112,9 +114,9 @@
       &emsp;&emsp;&emsp;&emsp;&emsp;  Junaid Rasheed and Michal Konečný
       <br>
       11:20-12:00
-      <em>Information Exchange between Over- and Underapproximating Software Analyses</em>
+      <em>Runtime Verification of Autonomous Systems with Imperfect Information</em>
       <br>
-      &emsp;&emsp;&emsp;&emsp;&emsp;  Jan Haltermann and Heike Wehrheim
+      &emsp;&emsp;&emsp;&emsp;&emsp;  Angelo Ferrando and Vadim Malvone
     </p>
     <h3>
       <b>12:00-13:00 Break</b>
@@ -142,7 +144,7 @@
       <b>15:00-15:30 Break</b>
     </h3>
     <h3 class="prog">
-      <b>15:30-17:30 Session 3: Verification and Testing 2</b>
+      <b>15:30-17:30 Session 3: Verifier Technology</b>
     </h3>
     <p>
       15:30-16:10
@@ -258,9 +260,9 @@
     </h3>
     <p>
       14:50-15:30
-      <em>Runtime Verification of Autonomous Systems with Imperfect Information</em>
+      <em>Information Exchange between Over- and Underapproximating Software Analyses</em>
       <br>
-      &emsp;&emsp;&emsp;&emsp;&emsp;  Angelo Ferrando and Vadim Malvone
+      &emsp;&emsp;&emsp;&emsp;&emsp;  Jan Haltermann and Heike Wehrheim
       <br>
       15:30-16:10
       <em>Runtime Enforcement of IEC 61499 Applications</em>
@@ -268,7 +270,7 @@
       &emsp;&emsp;&emsp;&emsp;&emsp;  Irman Faqrizal, Gwen Salaün and Yliès Falcone
     </p>
     <h3 class="prog">
-      <b>16:10-17:30 Closing</b>
+      <b>16:10-16:30 Closing</b>
     </h3>
       </div>
 </div>
