--- a/program.html
+++ b/program.html
@@ -166,7 +166,9 @@
       <b> DAY 2 Thursday 29 September </b>
     </h2>
     <h3 class="prog">
-      <b>09:00-09:45 Invited Talk</b>
+      <b>09:00-09:45 Invited Talk: Maintenance Meets Model Checking: Predictive Maintenance via Fault Trees and Formal Methods</b>
+      <br>
+      &emsp;&emsp;&emsp;&emsp;&emsp; Mariëlle Stoelinga  
       <br>
       <b>10:00-12:00 Session 4: Formal Methods for Intelligent and Learning Systems</b>
     </h3>
@@ -215,7 +217,9 @@
       <b> DAY 3 Friday 30 September </b>
     </h2>
     <h3 class="prog">
-      <b>09:00-09:45 Invited Talk</b>
+      <b>09:00-09:45 Invited Talk: Towards Verifying Neural-symbolic Multi-agent Systems</b>
+      <br>
+	&emsp;&emsp;&emsp;&emsp;&emsp; Alessio Lomuscio    
       <br>
       <b>10:00-12:00 Session 6: Program Synthesis</b>
     </h3>
