--- a/program.html
+++ b/program.html
@@ -114,7 +114,7 @@
       &emsp;&emsp;&emsp;&emsp;&emsp;  Junaid Rasheed and Michal Konečný
       <br>
       11:20-12:00
-      <em>Runtime Verification of Autonomous Systems with Imperfect Information (moved from Session 8)</em>
+      <em>Runtime Verification of Autonomous Systems with Imperfect Information</em>  (moved from Session 8)
       <br>
       &emsp;&emsp;&emsp;&emsp;&emsp;  Angelo Ferrando and Vadim Malvone
     </p>
@@ -264,7 +264,7 @@
     </h3>
     <p>
       14:50-15:30
-      <em>Information Exchange between Over- and Underapproximating Software Analyses (moved from Session 1)</em>
+      <em>Information Exchange between Over- and Underapproximating Software Analyses</em> (moved from Session 1)
       <br>
       &emsp;&emsp;&emsp;&emsp;&emsp;  Jan Haltermann and Heike Wehrheim
       <br>
