--- a/program.html
+++ b/program.html
@@ -274,7 +274,7 @@
       &emsp;&emsp;&emsp;&emsp;&emsp;  Irman Faqrizal, Gwen Salaün and Yliès Falcone
     </p>
     <h3 class="prog">
-      <b>16:10-16:30 Closing</b>
+      <b>16:10-16:30 Closing: Awards Ceremony</b>
     </h3>
       </div>
 </div>
