--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 <h2 class="secondH">* NEWS *</h2>
 		  
 <ul>
+<li> Free online access of LNCS 13550 "SEFM 2022: 20th International Conference on Software Engineering and Formal Method" is available <a href="https://link.springer.com/book/9783031171093 ">here</a><br>
 <li>The accepted papers have now been announced! </li>
 <li>Registration is now open. </li>
 <li>The SEFM'22 conference proceeding is accepted to be published in the Formal Methods subline of Springer's Lecture Notes in Computer Science. </li>
