--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 <h2 class="secondH">* NEWS *</h2>
 		  
 <ul>
+<li>The <a href="https://sefm-conference.github.io/2022/keynotespeaker.html">keynote lecture by M. Stoelinga</a> on <a href="https://sefm-conference.github.io/2022/program.html">Thursday Sept 29</a> as well as other selected SEFM talks will be streamed <a href="https://hu-berlin.zoom.us/j/66911877369">here</a>.</li>	
 <li>Online access of LNCS 13550 "SEFM 2022: 20th International Conference on Software Engineering and Formal Method" is available <a href="https://link.springer.com/book/9783031171093 ">here</a>. </li>
 <li>The accepted papers have now been announced! </li>
 <li>Registration is now open. </li>
