--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 <h2 class="secondH">* NEWS *</h2>
 		  
 <ul>
+<li>Online access to the SEFM Workshops Post Proceedings, Springer LNCS 13765, is available <a href="https://link.springer.com/book/10.1007/978-3-031-26236-4">here</a>. </li>
 <li>The <a href="https://sefm-conference.github.io/2022/keynotespeaker.html">keynote lecture by M. Stoelinga</a> on <a href="https://sefm-conference.github.io/2022/program.html">Thursday Sept 29</a> as well as other selected SEFM talks will be streamed <a href="https://hu-berlin.zoom.us/j/66911877369">here</a>.</li>	
-<li>Online access of LNCS 13550 "SEFM 2022: 20th International Conference on Software Engineering and Formal Method" is available <a href="https://link.springer.com/book/10.1007/978-3-031-26236-4">here</a>. </li>
+<li>Online access of LNCS 13550 "SEFM 2022: 20th International Conference on Software Engineering and Formal Method" is available <a href="https://link.springer.com/book/10.1007/978-3-031-17108-6">here</a>. </li>
 <li>The accepted papers have now been announced! </li>
 <li>Registration is now open. </li>
 <li>The SEFM'22 conference proceeding is accepted to be published in the Formal Methods subline of Springer's Lecture Notes in Computer Science. </li>
